# servarr-backup

./: Dockerfile  Dockerfile.cron  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_cron.sh
.github/workflows/: docker-build.yml
config/: servarr.json  servarr.yml
docker/: Dockerfile.cron  docker-compose.yml
servarr/: app.py
servarr/commands/backup/: __init__.py  create.py  delete.py  ls.py
servarr/commands/config/: __init__.py  init.py  show.py
servarr/models/destination/: s3.py
servarr/models/type/: __init__.py  prowlarr.py  radarr.py  sonarr.py
src/: requirements.txt
src/commands/backup/: create.py
src/commands/config/: init.py
src/models/destination/: s3.py
