[tool.poetry]
name = "servarr"
version = "0.2.0"
description = "Mediabox Backup Tool"
authors = ["Zerka <contact@zerka.dev>"]
readme = "README.md"

[tool.poetry.scripts]
servarr = 'servarr.app:main'

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.34.131"
humanize = "4.9.0"
requests = "2.28.1"
tabulate = "0.9.0"
argparse = "1.4.0"
pyyaml = "6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore = [
    "E203", # Whitespace before ':'
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
